--- a/test101/mytable1.yaml
+++ b/test101/mytable1.yaml
@@ -1,9 +1,9 @@
 apiVersion: example.com/v1alpha1
 kind: ABCTable
 metadata:
-  name: abctable1
+  name: abctable2
 spec:
   writecapacityunits: 5
   hashkeyelementtype: "S"
-  hashkeyelementname: "fname"
+  hashkeyelementname: "lname"
   readcapacityunits: 5
