--- a/test101/mytable1.yaml
+++ b/test101/mytable1.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   WriteCapacityUnits: 5
   HashKeyElementType: "S"
-  HashEeyElementName: "lname"
+  HashKeyElementName: "lname"
   ReadCapacityUnits: 5
