--- a/test102/peopletable.yaml
+++ b/test102/peopletable.yaml
@@ -3,7 +3,7 @@ kind: ABCTable
 metadata:
   name: peopletable
 spec:
-  writecapacityunits: 5
-  hashkeyelementtype: "S"
-  hashkeyelementname: "fname"
-  readcapacityunits: 5
+  WriteCapacityUnits: 5
+  HashKeyElementType: "S"
+  HashKeyElementName: "fname"
+  ReadCapacityUnits: 5
